Fix for bug#42364 reverted.